@startuml
class Logger {
  - level: LogLevel
  - formatter: LogFormatter
  - destinationManager: LogDestinationManager
  + log(level: LogLevel, message: string): void
}

class LogFormatter {
  + format(level: LogLevel, moduleName: string, message: string): string
}

class LogDestination {
  + log(log: string): void
}

class LogDestinationManager {
  - fileLogger: FileLogger
  - networkLogger: NetworkLogger
  + logToFile(log: string): void
  + logToNetwork(log: string): void
  + setDestination(destination: LogDestination): void
}

class FileLogger {
  - fileName: string
  - maxSize: int
  + log(log: string): void
  + rotateFiles(): void
}

class NetworkLogger {
  - endpoint: string
  - apiClient: RESTAPIClient
  + log(log: string): void
}

class RESTAPIClient {
  - endpoint: string
  + post(log: string): void
}

Logger --> LogFormatter
Logger --> LogDestination
LogDestination --> LogDestinationManager
LogDestinationManager --> FileLogger
LogDestinationManager --> NetworkLogger
NetworkLogger --> RESTAPIClient

@enduml
